tests/error/comprehension_errors/multi_use2.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: linst[qubit] @owned, xs: list[int]) -> linst[qubit]:
13:        return [q for x in xs for q in qs]
                                          ^^
GuppyTypeError: Variable `qs` with linear type `linst[qubit]` would be used multiple times when evaluating this comprehension
